Fixed crash on scanning second source or closing video source. Fixed some odd behavior that caused modifications while switching presets. Fixed crashes with previews < 100 pixels. Fixed cropping values not persiting. Fixed bug where the default clone instead of fast deep clone was used across the app.

--- a/VidCoder/View/Main.xaml
+++ b/VidCoder/View/Main.xaml
@@ -1291,7 +1291,7 @@
                     VerticalAlignment="Bottom"
                     Command="{Binding ProcessingService.AddToQueue}"
                     Padding="5 0"
-                    Visibility="{Binding HasVideoSource,
+                    Visibility="{Binding ProcessingService.CanTryEnqueueMultipleTitles,
                                          Converter={StaticResource VisibilityConverter}}">
                     <controls:SplitButton.MenuItemsSource>
                         <MenuItem Command="{Binding ProcessingService.AddToQueue}" Header="{x:Static res:MainRes.AddToQueueLabel}" />
