--- a/VidCoder/Controls/SeekBar.xaml
+++ b/VidCoder/Controls/SeekBar.xaml
@@ -18,20 +18,18 @@
             <Setter Property="VerticalAlignment" Value="Bottom" />
         </Style>
     </UserControl.Resources>
-    <Grid>
-        <Border Background="Black" CornerRadius="5" />
+    <Grid Background="Black">
         <Grid>
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Name="filledColumn" Width="30*" />
-                <ColumnDefinition Name="emptyColumn" Width="70*" />
+                <ColumnDefinition Name="filledColumn" Width="3*" />
+                <ColumnDefinition Name="emptyColumn" Width="7*" />
             </Grid.ColumnDefinitions>
-            <Border
-                Name="seekBarFilledBorder"
+            <Grid
+                Name="seekBarFilledGrid"
                 Grid.Column="0"
-                Margin="2 2 0 2"
-                CornerRadius="5,0,0,5">
-                <Border.Style>
-                    <Style TargetType="Border">
+                Margin="0 1">
+                <Grid.Style>
+                    <Style TargetType="Grid">
                         <Style.Triggers>
                             <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource AncestorType={x:Type UserControl}}}" Value="True">
                                 <Setter Property="Background">
@@ -55,8 +53,8 @@
                             </DataTrigger>
                         </Style.Triggers>
                     </Style>
-                </Border.Style>
-            </Border>
+                </Grid.Style>
+            </Grid>
         </Grid>
         <Grid Name="markersGrid" />
     </Grid>
