--- a/VidCoder/View/Preview/PreviewCreationControls.xaml
+++ b/VidCoder/View/Preview/PreviewCreationControls.xaml
@@ -27,7 +27,7 @@
             Slot="{Binding SelectedPreview,
                            Mode=TwoWay}" />
         <WrapPanel
-            Margin="4" 
+            Margin="4"
             HorizontalAlignment="Center"
             Orientation="Horizontal"
             Visibility="{Binding GeneratingPreview,
@@ -50,37 +50,42 @@
                         Text="{x:Static res:PreviewRes.EncodePreviewClipButton}" />
                 </StackPanel>
             </Button>
-            <ComboBox
-                Width="45"
-                Height="22"
-                Margin="10 4 0 4"
-                SelectedValue="{Binding PreviewSeconds}"
-                SelectedValuePath="Content">
-                <ComboBoxItem>5</ComboBoxItem>
-                <ComboBoxItem>10</ComboBoxItem>
-                <ComboBoxItem>15</ComboBoxItem>
-                <ComboBoxItem>30</ComboBoxItem>
-                <ComboBoxItem>60</ComboBoxItem>
-                <ComboBoxItem>120</ComboBoxItem>
-            </ComboBox>
-            <TextBlock
-                Margin="7 4 0 4"
-                VerticalAlignment="Center"
-                Style="{StaticResource PreviewText}"
-                Text="{x:Static res:PreviewRes.Seconds}" />
 
-            <TextBlock
-                Margin="20 4 0 4"
-                VerticalAlignment="Center"
-                Style="{StaticResource PreviewText}"
-                Text="{x:Static res:PreviewRes.ViewLabel}" />
-            <ComboBox
-                MinWidth="100"
-                Margin="6 4 0 4"
-                ItemsSource="{Binding DisplayNames,
-                                      Source={StaticResource DisplayChoices}}"
-                SelectedValue="{Binding DisplayType,
-                                        Converter={StaticResource DisplayChoices}}" />
+            <StackPanel Orientation="Horizontal">
+                <ComboBox
+                    Width="45"
+                    Height="22"
+                    Margin="10 4 0 4"
+                    SelectedValue="{Binding PreviewSeconds}"
+                    SelectedValuePath="Content">
+                    <ComboBoxItem>5</ComboBoxItem>
+                    <ComboBoxItem>10</ComboBoxItem>
+                    <ComboBoxItem>15</ComboBoxItem>
+                    <ComboBoxItem>30</ComboBoxItem>
+                    <ComboBoxItem>60</ComboBoxItem>
+                    <ComboBoxItem>120</ComboBoxItem>
+                </ComboBox>
+                <TextBlock
+                    Margin="7 4 0 4"
+                    VerticalAlignment="Center"
+                    Style="{StaticResource PreviewText}"
+                    Text="{x:Static res:PreviewRes.Seconds}" />
+            </StackPanel>
+
+            <StackPanel Orientation="Horizontal">
+                <TextBlock
+                    Margin="20 4 0 4"
+                    VerticalAlignment="Center"
+                    Style="{StaticResource PreviewText}"
+                    Text="{x:Static res:PreviewRes.ViewLabel}" />
+                <ComboBox
+                    MinWidth="100"
+                    Margin="6 4 0 4"
+                    ItemsSource="{Binding DisplayNames,
+                                          Source={StaticResource DisplayChoices}}"
+                    SelectedValue="{Binding DisplayType,
+                                            Converter={StaticResource DisplayChoices}}" />
+            </StackPanel>
 
             <Button
                 Height="23"
@@ -103,8 +108,8 @@
         </WrapPanel>
 
         <Grid
-            Margin="12 0 12 23"
-            VerticalAlignment="Bottom"
+            Margin="12 8"
+            VerticalAlignment="Center"
             Visibility="{Binding GeneratingPreview,
                                  Converter={StaticResource VisibilityConverter}}">
             <Grid.ColumnDefinitions>
