--- a/VidCoder/View/Preview/PreviewOneToOne.xaml
+++ b/VidCoder/View/Preview/PreviewOneToOne.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="VidCoder.View.Preview.PreviewStillFit"
+    x:Class="VidCoder.View.Preview.PreviewOneToOne"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -8,12 +8,13 @@
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <Grid>
-        <Image
-            Name="previewImage"
-            HorizontalAlignment="Left"
-            VerticalAlignment="Top"
-            Source="{Binding PreviewImage}"
-            Stretch="Fill" />
-    </Grid>
+    <ScrollViewer
+        Name="previewImageScrollViewer"
+        HorizontalScrollBarVisibility="Auto"
+        VerticalScrollBarVisibility="Auto">
+        <Grid
+            Name="previewHolder"
+            HorizontalAlignment="Center"
+            VerticalAlignment="Center" />
+    </ScrollViewer>
 </UserControl>
