In-program preview video playing. Missing volume controls, seek bar click and handling failed load.

--- a/VidCoder/View/OptionsDialog.xaml
+++ b/VidCoder/View/OptionsDialog.xaml
@@ -149,6 +149,12 @@
                                     IsEnabled="{Binding UseCustomVideoPlayer}"
                                     Padding="3 2" />
                             </Grid>
+                            <CheckBox
+                                    Margin="0 6 0 0"
+                                    HorizontalAlignment="Left"
+                                    VerticalAlignment="Center"
+                                    Content="{x:Static res:OptionsRes.UseBuiltInPlayerForPreviewsCheckBox}"
+                                    IsChecked="{Binding UseBuiltInPlayerForPreviews}" />
                         </StackPanel>
 
                         <!--  Sounds  -->
