--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -1,52 +1,58 @@
 ﻿<Window
-    x:Class="VidCoder.View.PreviewWindow"
-    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="clr-namespace:VidCoder.Controls"
-    xmlns:local="clr-namespace:VidCoder"
-    xmlns:localmodel="clr-namespace:VidCoder.Model"
-    xmlns:preview="clr-namespace:VidCoder.View.Preview"
-    xmlns:res="clr-namespace:VidCoder.Resources"
-    Title="{Binding Title}"
-    Width="864"
-    Height="514"
-    MinWidth="405"
-    MinHeight="200"
-    AllowDrop="True"
-    PreviewDragOver="Window_PreviewDragOver"
-    PreviewDrop="Window_PreviewDrop"
-    ShowInTaskbar="False"
-    TextOptions.TextFormattingMode="Display"
-    WindowStyle="ToolWindow">
-    <Window.InputBindings>
-        <KeyBinding
-            Key="Q"
-            Command="{Binding ProcessingService.AddToQueue}"
-            Modifiers="Control" />
-        <KeyBinding
-            Key="O"
-            Command="{Binding ProcessingService.QueueFiles}"
-            Modifiers="Control+Shift" />
-        <KeyBinding
-            Key="T"
-            Command="{Binding ProcessingService.QueueTitlesAction}"
-            Modifiers="Control" />
-        <KeyBinding
-            Key="D"
-            Command="{Binding OutputPathVM.PickOutputPath}"
-            Modifiers="Control" />
-    </Window.InputBindings>
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        <Grid
-            Name="previewArea"
-            Background="#666666"
-            SizeChanged="PreviewArea_OnSizeChanged" />
-        <Grid Name="previewControls" Grid.Row="1">
-            <preview:PreviewCreationControls />
-        </Grid>
-    </Grid>
+	x:Class="VidCoder.View.PreviewWindow"
+	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+	xmlns:controls="clr-namespace:VidCoder.Controls"
+	xmlns:local="clr-namespace:VidCoder"
+	xmlns:localmodel="clr-namespace:VidCoder.Model"
+	xmlns:preview="clr-namespace:VidCoder.View.Preview"
+	xmlns:res="clr-namespace:VidCoder.Resources"
+	Title="{Binding Title}"
+	Width="864"
+	Height="514"
+	MinWidth="405"
+	MinHeight="200"
+	AllowDrop="True"
+	PreviewDragOver="Window_PreviewDragOver"
+	PreviewDrop="Window_PreviewDrop"
+	ShowInTaskbar="False"
+	TextOptions.TextFormattingMode="Display"
+	WindowStyle="ToolWindow">
+	<Window.InputBindings>
+		<KeyBinding
+			Key="Q"
+			Command="{Binding ProcessingService.AddToQueue}"
+			Modifiers="Control" />
+		<KeyBinding
+			Key="O"
+			Command="{Binding ProcessingService.QueueFiles}"
+			Modifiers="Control+Shift" />
+		<KeyBinding
+			Key="T"
+			Command="{Binding ProcessingService.QueueTitlesAction}"
+			Modifiers="Control" />
+		<KeyBinding
+			Key="D"
+			Command="{Binding OutputPathVM.PickOutputPath}"
+			Modifiers="Control" />
+	</Window.InputBindings>
+	<Grid>
+		<Grid.RowDefinitions>
+			<RowDefinition />
+			<RowDefinition Height="Auto" />
+		</Grid.RowDefinitions>
+		<Grid
+			Name="previewArea"
+			Background="#666666"
+			SizeChanged="PreviewArea_OnSizeChanged" />
+		<Grid
+			Grid.Row="0"
+			Cursor="Hand"
+			Visibility="{Binding PlayingPreview, Converter={StaticResource VisibilityConverter}}"
+			Background="Transparent"
+			MouseDown="OnVideoClick" />
+		<Grid Name="previewControls" Grid.Row="1">
+			<preview:PreviewCreationControls />
+		</Grid>
+	</Grid>
 </Window>
