--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -160,3 +160,36 @@ pre {
         }
     }
 }
+
+.button {
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    padding: 12px 24px;
+    border: 1px solid #1f7229;
+    border-radius: 8px;
+    background: #33ba42;
+    background: -webkit-gradient(linear, left top, left bottom, from(#33ba42), to(#1f7229));
+    background: -moz-linear-gradient(top, #33ba42, #1f7229);
+    background: linear-gradient(to bottom, #33ba42, #1f7229);
+    text-shadow: #14481a 1px 1px 1px;
+    font: normal normal bold 20px arial;
+    color: #ffffff;
+    text-decoration: none;
+}
+.button:hover,
+.button:focus {
+    border: 1px solid #278f33;
+    background: #3ddf4f;
+    background: -webkit-gradient(linear, left top, left bottom, from(#3ddf4f), to(#258931));
+    background: -moz-linear-gradient(top, #3ddf4f, #258931);
+    background: linear-gradient(to bottom, #3ddf4f, #258931);
+    color: #ffffff;
+    text-decoration: none;
+}
+.button:active {
+    background: #1f7229;
+    background: -webkit-gradient(linear, left top, left bottom, from(#1f7229), to(#1f7229));
+    background: -moz-linear-gradient(top, #1f7229, #1f7229);
+    background: linear-gradient(to bottom, #1f7229, #1f7229);
+}
