Now when choosing a preset in a picker, the preset is chosen in the main UI and locked. This keeps the UI in sync with the output and avoids confusion about what the feature is doing.

--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -30,7 +30,7 @@
 			Modifiers="Control" />
 		<KeyBinding
 			Key="D"
-			Command="{Binding OutputPathVM.PickOutputPath}"
+			Command="{Binding OutputPathService.PickOutputPath}"
 			Modifiers="Control" />
 	</Window.InputBindings>
 	<Grid>
