Add latest version and release notes links to homepage.

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -205,3 +205,15 @@ pre {
     padding-top: 10px;
     padding-bottom: 10px;
 }
+
+.versionHeader {
+    margin-bottom: 0;
+}
+
+.betaVersionHeader {
+    margin-top: 15px;
+}
+
+.releasesTable {
+    margin-bottom: 20px;
+}
