Fixed beta release notes link, changed nav header to gray.

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,5 +1,5 @@
 // Base Colors
-$primary-color: #015D05;
+$primary-color: #444;
 $secondary-color: #fff;
 $complimentary-color: #ccc;
 $body-bg: #fdfdfd;
